# gtw

./: .prettierrc  Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js
src/: layoutController.rs  main.rs
src/components/: mod.rs
src/components/auth/: login.rs
src/geradorDeToken/: layout.rs
src/login/: core.rs  layoutEntrar.rs  mod.rs
src/styleManager/: output.css
